<resources>
    <string name="app_name">veer</string>
    <string name="asset_statements" translatable="false">
    [{
        \"relation\": [\"delegate_permission/common.handle_all_urls\"],
        \"target\": {
        \"namespace\": \"web\",
        \"site\": \"http://127.0.0.1:8080\"}
        },
        {
        \"relation\": [\"delegate_permission/common.handle_all_urls\"],
        \"target\": {
        \"namespace\": \"web\",
        \"site\": \"http://localhost:8080\"}
        },
        {
        \"relation\": [\"delegate_permission/common.handle_all_urls\"],
        \"target\": {
        \"namespace\": \"web\",
        \"site\": \"http://localhost\"}
        },
        {
        \"relation\": [\"delegate_permission/common.handle_all_urls\"],
        \"target\": {
        \"namespace\": \"web\",
        \"site\": \"https://asavan.github.io\"}
    }]
    </string>
    <string name="ai">Ai in webview</string>
    <string name="ai_localhost">Ai in webview localhost</string>
    <string name="launch_twa_ai">Launch ai newest version</string>
    <string name="newest">Launch newest version</string>
    <string name="check_memory">Memory test</string>
    <string name="launch_browser">Browser</string>
    <string name="launch_real_ip">Real IP</string>
    <string name="launch_twa_localhost">Twa localhost</string>
    <string name="launch_twa_ai_localhost">Twa ai localhost</string>
    <string name="launch_twa_127">Twa 127.0.0.1</string>
    <string name="launch_localhost">localhost</string>
    <string name="launch_twa_local">Launch in app local</string>
    <string name="network_info">Network info</string>
    <string name="stop_service">Stop</string>
    <string name="webview">Webview</string>
    <string name="webview_localhost">Webview localhost</string>
    <string name="errors">Error messages</string>

</resources>
